[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,21 @@ body {
     height: 200px;
 }
 
+.whole
+{
+
+}
+
+.head
+{
+    background:white;
+    color:green;
+    padding-top=50px;
+    
+    
+}
+
+.content
+{
+
+}
