--- a/ui/style.css
+++ b/ui/style.css
@@ -22,7 +22,10 @@ body {
 
 .whole
 {
-
+    padding-top:50px;
+    padding-right:50px;
+    padding-left:50px;
+    padding-bottom:50px;
 }
 
 .head
