[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -3,13 +3,13 @@
 .head
 {
     background-color:white;
-    color:red;
+    color:green;
    
     
     
 }
 
-.imp
+.whole
 {
     background-color:green;
     color:white;
