--- a/ui/style.css
+++ b/ui/style.css
@@ -1,5 +1,5 @@
 <style>
-.y{background-image:url("http://cdn1.askiitians.com/cms-content/biologymorphology-of-flowering-plantsleaf_0.jpg");background-position:center;background-repeat:no-repeat;text-align:center;color:green;border:1px green solid;padding-left:50px;
+.y{background-image:url("http://cdn1.askiitians.com/cms-content/biologymorphology-of-flowering-plantsleaf_0.jpg");background-position:center;text-align:center;color:green;border:1px green solid;padding-left:50px;
     padding-right:50px;
     padding-top:50px;
     padding-bottom:50px;}
