[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -6,7 +6,8 @@
 
 
 .x{background-image:url("http://cdn1.askiitians.com/cms-content/biologymorphology-of-flowering-plantsleaf_0.jpg");
-background-repeat:no-repeat;background:green;text-align:center;color:white;padding-left:500px;padding-right:500px;font-family:sans-serif}
+background-repeat:no-repeat;background:white;text-align:center;color:green;padding-left:500px;padding-right:500px;font-family:sans-serif}
+.y{background:white;}
 
 A:link{
 text-decoration:none;
