--- a/ui/style.css
+++ b/ui/style.css
@@ -7,7 +7,7 @@
 
 .x{background-image:url("http://cdn1.askiitians.com/cms-content/biologymorphology-of-flowering-plantsleaf_0.jpg");
 background-repeat:no-repeat;background:white;text-align:center;color:green;padding-left:500px;padding-right:500px;font-family:sans-serif}
-.y{background:white;}
+.y{background:green;color:white;}
 
 A:link{
 text-decoration:none;
