--- a/ui/style.css
+++ b/ui/style.css
@@ -6,7 +6,7 @@
 
 
 .x{background-image:url("http://cdn1.askiitians.com/cms-content/biologymorphology-of-flowering-plantsleaf_0.jpg");
-background-repeat:no-repeat;background:white;text-align:center;color:green;padding-left:200px;padding-right:200px;font-family:sans-serif}
+background-repeat:no-repeat;text-align:center;color:green;padding-left:200px;padding-right:200px;font-family:sans-serif}
 .y{background:green;color:white;}
 
 A:link{
