--- a/ui/style.css
+++ b/ui/style.css
@@ -8,7 +8,7 @@ background-repeat:no-repeat;background-size:cover;text-align:justify;color:white
 .z{height:25px;
 width:25px;
 background-color:blue;
-color:white;
+color:blue;
 text-align:center;
 margin:auto
 ;}
