[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -5,9 +5,11 @@ background-repeat:no-repeat;background-size:cover;text-align:justify;color:white
 
 .y{background:url("http://www.solidbackgrounds.com/images/1920x1080/1920x1080-mint-cream-solid-color-background.jpg");padding:50px;color:black;margin-left:200px;margin-right:200px;text-align:justify;}
 
-.z{height:25px;
-width:25px;
+.z{height:40px;
+width:80px;
 background-color:blue;
+border-color:blue;
+border-style:solid;
 color:blue;
 text-align:center;
 margin:auto
