[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,7 @@
 
 
 .x{background:url("https://media.giphy.com/media/j87i7eGYbx756/giphy.gif");
-background-repeat:no-repeat;background-size:cover;text-align:justify;color:white;padding:50px;font-family:sans-serif}
+background-repeat:no-repeat;background-size:500px;text-align:justify;color:white;padding:50px;font-family:sans-serif}
 
 .y{background:url("http://www.solidbackgrounds.com/images/1920x1080/1920x1080-mint-cream-solid-color-background.jpg");padding:50px;color:black;margin-left:200px;margin-right:200px;text-align:justify;}
 
