[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -8,5 +8,5 @@ background-repeat:no-repeat;background-size:cover;text-align:justify;color:white
 
 
 A:hover{color:yellow;}
-A:visited{color:pink;}
+A:visited{color:green;}
 A:link{color:red;}
